# jaggrab

./: .gitmodules  CMakeLists.txt
include/: buffer.h  crc.h  error_code.h  utility.h
src/: buffer.c  crc.c  error_code.c  main.c
